# fun-window

./: CMakeLists.txt  README.md
include/discord/: CMakeLists.txt
src/: main.cpp  presence.cpp  presence.h
src/volume/: geom.cpp  petrie.cpp
