cmake_minimum_required(VERSION 3.10)

project(fun-window VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)

include_directories(include)
file(GLOB LIBRARIES "lib/*.dylib")
message("LIBRARIES = ${LIBRARIES}")

# add the executable
add_executable(fun-window src/main.cpp)

target_link_libraries(fun-window ${LIBRARIES})